# surreal-migration-cli

./: .gitignore  Cargo.toml
src/: main.rs
